Nhibernate helper ve Ientity

--- a/Backend/Base/Base.csproj
+++ b/Backend/Base/Base.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NHibernate" Version="5.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DB\Interface\" />
+    <Folder Include="DB\Manager\" />
+  </ItemGroup>
+
 </Project>
